corrected layout shift

--- a/src/style.css
+++ b/src/style.css
@@ -3,10 +3,16 @@
     margin: 0;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 body {
     font-family: "Montserrat", sans-serif;
     color: #404040;
     line-height: 1.5;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 img {
